# protoMOMxx

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  build_and_run_derecho.sh  create_env.sh
.github/workflows/: clang-format.yaml  docs-check.yaml  docs-publish.yaml  unit-tests.yaml
cmake/: protomomtarget.cmake
config_src/drivers/solo_driver/: CMakeLists.txt  MOM_driver.cpp
config_src/infra/: CMakeLists.txt  MOM_domain.cpp  MOM_domain.h  domain.cpp  domain.h
docs/: Doxyfile
src/core/: CMakeLists.txt  MOM.cpp  MOM.h
src/framework/: CMakeLists.txt  MOM_directories.cpp  MOM_directories.h  MOM_document.cpp  MOM_document.h  MOM_file_parser.cpp  MOM_file_parser.h  MOM_get_input.cpp  MOM_get_input.h  MOM_io.h  MOM_logger.cpp  MOM_logger.h  MOM_nml_parser.cpp  MOM_nml_parser.h  MOM_param_table.cpp  MOM_param_table.h  MOM_parser_utilities.cpp  MOM_parser_utilities.h  MOM_parser_utils.cpp  MOM_parser_utils.h  MOM_string_functions.h  MOM_string_utils.h
tests/: CMakeLists.txt
tests/MOM_directories/: input.nml  test_MOM_directories.cpp
tests/MOM_document/: test_MOM_document.cpp
tests/MOM_file_parser/: test_MOM_file_parser.cpp
tests/MOM_file_parser/MOM_param_files/: MOM_input_directive  MOM_input_invalid1  MOM_input_invalid2  MOM_input_invalid3  MOM_input_invalid4  MOM_input_invalid5  MOM_input_invalid6  MOM_input_lists  MOM_input_modules  MOM_input_simple  MOM_override_invalid  MOM_override_modules
tests/MOM_get_input/: input_test.nml  test_MOM_get_input.cpp
tests/MOM_io/: test_MOM_io.cpp
tests/MOM_logger/: test_MOM_logger.cpp
tests/MOM_nml_parser/: test_MOM_nml_parser.cpp
tests/MOM_nml_parser/nml_files/: double_gyre_input.nml  filepath_string_empty_nml.nml  namelist_arrays.nml  namelist_comments.nml  namelist_invalid1.nml  namelist_invalid2.nml  namelist_invalid3.nml  namelist_modules.nml  namelist_simple.nml  oneline.nml  scalar_int_and_string.nml
tests/config_src/infra/: CMakeLists.txt  test_domain.cpp
